[package]
name = "mempool-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
alloy = { version = "0.8", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
hex = "0.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
